--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 
@@ -9,12 +11,13 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+whiteboard.txt
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/wala.js
