--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,19 @@
   "name": "current-affairs",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "engines": {
+    "node": "8.11.1",
+    "yarn": "1.5.1"
+  },
   "repository": "https://github.com/AquilaVirtual/current-affairs-backend",
   "author": "David Loveday",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
